[gd_scene load_steps=4 format=3 uid="uid://b26rotiw7bfj5"]

[ext_resource type="Script" path="res://hud.gd" id="1_p24dr"]
[ext_resource type="FontFile" uid="uid://b3xpof4xnv77c" path="res://fonts/Xolonium-Regular.ttf" id="1_rfh1g"]
[ext_resource type="Script" path="res://Message.gd" id="3_r77kx"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_p24dr")

[node name="ScoreLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("1_rfh1g")
theme_override_font_sizes/font_size = 64
text = "score:"

[node name="RemainLabel" type="Label" parent="."]
offset_top = 64.0
offset_right = 153.0
offset_bottom = 148.0
theme_override_fonts/font = ExtResource("1_rfh1g")
theme_override_font_sizes/font_size = 32
text = "Remains:"

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -240.0
offset_right = 320.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_rfh1g")
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
script = ExtResource("3_r77kx")

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
